...
                $0.size(CGSize(width: 24, height: 24))
            })
    }
    
    private func setupSearchLabel() {
        searchLabel
            .setAccessibilityIdentifier("HomeSearchBarViewSearchLabel")
            .setAccessibility(label: "장소 검색 안내 레이블", hint: "장소 검색 화면으로 이동하려면 두 번 탭하세요")
            .setText(text: "어디로 갈까요?")
            .setFont(textStyle: .body, size: 14, weight: .regular)
            .makeConstraints({
                $0.leading(equalTo: searchIconImageView.trailingAnchor, constant: 8)
                $0.trailing(equalTo: trailingAnchor, constant: 8)
...
