...
        setupMyLocationLabel()
        setupAddressLabel()
    }
    
    private func setupBackButton() {
        backButton
            .setAccessibilityIdentifier("PlaceSearchNavigationBarBackButton")
            .setAccessibility(label: "뒤로가기 버튼", hint: "장소 검색 화면을 닫으려면 두 번 탭하세요", traits: .button)
            .configureNavigationStyle(type: .back)
            .makeConstraints({
                $0.top(equalTo: topAnchor)
                $0.leading(equalTo: leadingAnchor, constant: 12)
                $0.size(CGSize(width: 36, height: 30))
...
